k8s-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-app
spec:
  tls:
    - secretName: exmp-https-tls
      hosts:
        - exmp-https.com
  rules:
    - host: exmp-https.com
      http:
        paths:
          - pathType: ImplementationSpecific
            backend:
              service:
#                name: main-app
                name: main-app-by-command
                port:
                  number: 80
